correções card horizontal

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
-<!-- <app-title [textTitle]="'Latest News'"></app-title>
-<app-title [textTitle]="'Operating, Reserve, and \nVault accounts'" [position]="'center'"></app-title> -->
+<app-main></app-main>
+<app-second></app-second>
+<app-footer></app-footer>
 <!-- <app-horizontal-card
   [type]="'Financial Advice'"
   [text]="'Barely half of banks\' own employees would recommend their international payment services to customers'"
