--- a/src/app/components/title/title.scss
+++ b/src/app/components/title/title.scss
@@ -3,8 +3,7 @@
     text-align: left;
     padding: 5rem;
     color: #2b2b2b;
-    width: auto;
-    max-width: 100%;
+    font-size: 3em;
 }
 
 @media screen and (min-width: 1921px) {
