--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,7 @@ html {
       primary: mat.$azure-palette,
       tertiary: mat.$blue-palette,
     ),
-    typography: Roboto,
+    typography: Montserrat,
     density: 0,
   ));
 }
@@ -41,7 +41,7 @@ body {
     line-height: 1.5;
     /* 5. Improve text rendering */
     -webkit-font-smoothing: antialiased;
-    background-color: #f2f2f2;
+    background-color: #FFFFFF;
   }
   
   /* 6. Improve media defaults */
